<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".info.InfoContactFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:textColor="@color/black"
        android:textSize="@dimen/bigText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/contact_phone"
        android:textColor="@color/blue"
        android:textSize="@dimen/middleText"
        app:layout_constraintBottom_toTopOf="@id/temperament"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/temperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/contact_temperament"
        android:textSize="@dimen/middleText"
        app:layout_constraintBottom_toTopOf="@id/educationPeriod"
        app:layout_constraintLeft_toLeftOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/phone" />

    <TextView
        android:id="@+id/educationPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/contact_educationPeriod"
        android:textSize="@dimen/middleText"
        app:layout_constraintLeft_toLeftOf="@id/temperament"
        app:layout_constraintTop_toBottomOf="@id/temperament" />

    <TextView
        android:id="@+id/biography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/info_contact_fragment"
        android:textColor="@color/black"
        android:textSize="@dimen/middleText"
        app:layout_constraintLeft_toLeftOf="@id/educationPeriod"
        app:layout_constraintTop_toBottomOf="@id/educationPeriod" />

</androidx.constraintlayout.widget.ConstraintLayout>